EStandardChartTheme uses pattern matching. Requires --enabble-preview in tasks.